# azure-genai-utils

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  setup.py
azure_genai_utils/rag/: base.py  pdf.py
